# EasySystem

./: .gitignore  README.md  bot.py  info.json  pyproject.toml  requirements.txt  to_implement.py
cogs/: admin.py  events.py
commandchannel/: __init__.py  commandchannel.py  info.json
easyfnstats/: __init__.py  easyfnstats.py  enums.py  info.json
embedlink/: __init__.py  embedlink.py  info.json
emoji_manager/: __init__.py  emoji_manager.py
emojimanager/: __init__.py  emoji_manager.py  info.json  transformers.py
message_link/: __init__.py  info.json  message_link.py
reaction_roles/: __init__.py  reaction_roles.py
suggestions/: __init__.py  info.json  suggestions.py  types.py  views.py
update/: __init__.py  info.json  selection.py  types.py  update.py  views.py
utils/: __init__.py  checks.py  config.py  database.py  security.py  update.py  utils.py
